// File contains types representing the Zanzibar's Permission Tuple data model. 
// The tuple data structure is used to persist the relation tuples in the datastore

syntax = "proto3";

package internal.domain.tuple;

option go_package = "github.com/sourcenetwork/source-zanzibar/internal/domain/tuple";

import "google/protobuf/any.proto";


// RelType indicate the type of relation defined by the tuple
enum RelType {
    // Defines a relation from an object to a userset
    DELEGATION = 0;

    // Grant a relation to some actor
    GRANT = 1;

    // Defines a relation between two objects (non actor target)
    OBJECT_REL = 2;
}


// ObjRel represents a `Userser` in Zanzibar terminology.
// It represents a Node in Zanzibar's relation graph.
message ObjRelRecord {
    string namespace = 1;
    string id = 2;
    string relation = 3;
}


// TupleRecord represents a Zanzibar Tuple that gets persisted
message TupleRecord {
    // Object and relation relation information
    ObjRelRecord object_rel = 1;

    // Actor, object or actor group node
    ObjRelRecord actor = 2;

    RelType type = 3;

    // Satellite data users can optionally embed within a tuple
    optional google.protobuf.Any client_data = 4;
}
